# 4dn-cloud-infra

./: .gitignore  .python-version  4dn-cloud-infra  CHANGELOG.rst  LocalTest.ipynb  Makefile  README.md  app-cgap.py  app-fourfront.py  app.py  buckets.py  buckets.py.DISABLED  check_setup.json  check_setup.template.json  foursight_local.py  pyproject.toml  pytest.ini  requirements.txt
.chalice/: README.rst  cgap-mastertest  overrides.json  policy-dev.json  policy-prod.json
.github/workflows/: main.yml
docs/: account_migration.rst  architecture.rst  configuring_env_utils.rst  create_new_stack.rst  deploy.rst  deploy_fourfront.rst  deploy_foursight_fourfront.rst  deploy_new_account.rst  destroying_an_account.rst  encryption.rst  kibana.rst  making_stack_changes.rst  migration.rst  running_foursight_from_ec2.rst  setup.rst
docs/source/: conf.py  create_new_stack.rst  deploy_new_account.rst  destroying_an_account.rst  encryption.rst  index.rst  kibana.rst  making_stack_changes.rst  migration.rst  running_foursight_from_ec2.rst  setup.rst
foursight_development/: RunCheckAndAction.ipynb  development_app.py  run_check_and_action.py
foursight_local/: RunCheckAndAction.ipynb  app.py  run_check_and_action.py
scripts/: activate_creds.sh  archive_previous_chalice_deployment  assure_global_env_bucket.py  assure_s3_encrypt_key  check_for_dangling_vpc_components  create_s3_encrypt_key  delete_pending_buckets  delete_pending_buckets.data.txt  deploy_ecs.py  fetch_file_items.py  find_foursight.py  foursight_development_ec2_setup.sh  link_foursight_app.sh  load_knowledge_base.py  local_testing_ec2_setup.sh  pending_deletion  prune_chalice_package.sh  queue_ingestion.py  resolve_foursight_checks.py  upload_application_version.py  upload_file_processed.py  upload_tibanna_awsf  upload_vspreadsheets.py
src/: application.py  aws.py  aws_util.py  base.py  c4name.py  cli.py  com.py  constants.py  data_store.py  db.py  ecr.py  ecs.py  exceptions.py  exports.py  goog_util.py  iam.py  infra.py  main.py  mixins.py  names.py  network.py  part.py  pricing_calculator.py  stack.py  util.py
src/auto/init_custom_dir/: aws_credentials_info.py  awsenvinfo.py  cli.py  defs.py  utils.py
src/auto/init_custom_dir/templates/: config.template.json  secrets.template.json
src/auto/setup_remaining_secrets/: aws_context.py  aws_functions.py  cli.py  defs.py  utils.py
src/auto/templates/: config.template.json  secrets.template.json
src/auto/update_cors_policy/: cli.py
src/auto/update_kms_policy/: cli.py
src/auto/update_sentieon_security/: cli.py
src/auto/utils/: args_utils.py  aws.py  aws_context.py  locations.py  misc_utils.py  validate_utils.py
src/cli_utils/: aws_secrets.py  aws_stacks.py
src/commands/: assure_global_env_bucket.py  create_demo_metawfr.py  deploy_ecs.py  env_status.py  fetch_file_items.py  find_foursight.py  find_resources.py  identity_swap.py  load_knowledge_base.py  queue_ingestion.py  resolve_foursight_checks.py  setup_pipeline.py  setup_tibanna.py  show_ecs.py  upload_application_version.py  upload_file_processed.py  upload_vspreadsheets.py
src/info/: aws_util.py
src/parts/: appconfig.SAMPLE.py  appconfig.py  application_configuration_secrets.py  beanstalk.py  codebuild.py  crowdstrike.py  datastore.py  datastore_slim.py  ec2_common.py  ecr.py  ecs.py  ecs_blue_green.py  fourfront_ecs.py  fourfront_ecs_blue_green.py  higlass.py  iam.py  jupyterhub.py  logging.py  logging_blue_green.py  network.py  redis.py  sentieon.py  tibanna.py
src/stacks/: alpha_stacks.py  foursight.py  legacy_stacks.py.DISABLED  staging.py  trial-ecs.py  trial.py  trial_alpha.py  trial_ecs.py
src/tests/: test_assure_global_env_bucket.py  test_base.py  test_part.py
test_data/na_12879/: file_processed.json  na12879_accessioning.xlsx
tests/: test_app.py  test_aws_context.py  test_aws_credentials_info.py  test_awsenvinfo.py  test_init_custom_dir.py  test_qa_utils_mock_boto3_changes.py  test_resolve_foursight_checks.py  test_setup_remaining_secrets.py  test_update_kms_policy.py  test_update_sentieon_security.py  test_version.py  testing_utils.py
tibanna_inputs/: trial_tibanna_test_input.json
