[tool.poetry]
name = "4dn-cloud-infra"
version = "3.4.0"
description = "Repository for generating Cloudformation Templates to orchestrate the CGAP Ecosystem"
authors = ["4DN-DCIC Team <4dn-dcic@gmail.com>"]
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
awacs = "1.0.4"
awscli = "^1.25.34"
boto3 = "^1.24.34"
botocore = "^1.27.36"
chalice = "1.27.1"
dcicutils = "^4.0.2"

# lock foursight to deploy foursight-ff
#foursight = { path = "../foursight", develop = false }
#foursight = "1.11.0.1b20"

# foursight-cgap
#lock foursight-cgap to deploy foursight-cgap
foursight-cgap = "2.0.1.1b82"
#foursight-cgap = "^1.0.0"

# Foursight-Core
#foursight-core = { path = "../foursight-core", develop = false }
foursight-core = "1.0.2.1b12"
#foursight-core = "0.6.0"

# pyrsistent = "^0.17.3"
# We don't want to use python-levenshtein if at all possible. See me or Andy for details. -kmp 17-Aug-2021
# python-levenshtein = "^0.12.2"
pbkdf2 = "1.3"
submit-cgap = "1.3.0"
magma-suite = "^1.0.0"
prettytable = "3.3.0"
tibanna = "2.0.0"
tibanna-ff = "1.1.0.1b2"
tqdm = "4.62.3"
troposphere = "3.2.2"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
#numpy = "1.21.6"  # added to allow to lock, last viable version for 3.7 - Will July 21 2022
#pandas = "1.3.5"  # added to allow to lock, last viable version for 3.7 - Will July 21 2022
cfn-flip = "1.2.3"  # do we need to specify this explicitly? -kmp 27-Jul-2021
cfn-lint = "0.48.3"  # a secondary check that catches more things than standard validate - Will 4/1/2021
boto3-stubs = "^1.24.34"
botocore-stubs = "^1.27.34"
# Linting generally
flake8 = ">=3.9.2"
mock = "^4.0.3"
# pygments is used by PyCharm
pygments = ">=2.10.0"
pytest = ">=5.1.2"  # 5.1.2 is needed by foursight-cgap, but otherwise we'd be happier for a higher version

[tool.poetry.scripts]
# dcicutils commands
add-image-tag = "dcicutils.ecr_scripts:add_image_tag_main"
show-global-env-bucket = "dcicutils.env_scripts:show_global_env_bucket_main"
show-image-manifest = "dcicutils.ecr_scripts:show_image_manifest_main"
show-image-catalog = "dcicutils.ecr_scripts:show_image_catalog_main"
unrelease-most-recent-image = "dcicutils.ecr_scripts:unrelease_most_recent_image_main"
# 4dn-cloud-infra commands
assure-global-bucket-env = "src.commands.assure_global_env_bucket:main"
cli = "src.cli:cli"
create-demo-metawfr = "src.commands.create_demo_metawfr:main"
init-custom-dir = "src.auto.init_custom_dir.cli:main"
setup-remaining-secrets = "src.auto.setup_remaining_secrets.cli:main"
update-cors-policy = "src.auto.update_cors_policy.cli:main"
update-kms-policy = "src.auto.update_kms_policy.cli:main"
update-sentieon-security = "src.auto.update_sentieon_security.cli:main"
datastore-attribute = "src.commands.find_resources:datastore_attribute_main"
deploy-ecs = "src.commands.deploy_ecs:main"
env-status = "src.commands.env_status:main"
fetch-file-items = "src.commands.fetch_file_items:main"
identity-swap = "src.commands.identity_swap:main"
load-knowledge-base = "src.commands.load_knowledge_base:main"
network-attribute = "src.commands.find_resources:network_attribute_main"
open-foursight-url = "src.commands.find_resources:open_foursight_url_main"
open-health-page-url = "src.commands.find_resources:open_health_page_url_main"
open-portal-url = "src.commands.find_resources:open_portal_url_main"
setup-tibanna-patches = "src.commands.setup_tibanna:setup_tibanna_patches_main"
setup-tibanna-pipeline-repo = "src.commands.setup_tibanna:setup_tibanna_pipeline_repo_main"
setup-tibanna-precheck = "src.commands.setup_tibanna:setup_tibanna_precheck_main"
setup-tibanna = "src.commands.setup_tibanna:setup_tibanna_main"
show-datastore-attribute = "src.commands.find_resources:show_datastore_attribute_main"
show-foursight-url = "src.commands.find_resources:show_foursight_url_main"
show-health-page-url = "src.commands.find_resources:show_health_page_url_main"
show-network-attribute = "src.commands.find_resources:show_network_attribute_main"
show-portal-url = "src.commands.find_resources:show_portal_url_main"
show-sentieon-server-ip = "src.commands.find_resources:show_sentieon_server_ip_main"
queue-ingestion = "src.commands.queue_ingestion:main"
resolve-foursight-checks = "src.commands.resolve_foursight_checks:main"
upload-application-version = "src.commands.upload_application_version:main"
upload-file-processed = "src.commands.upload_file_processed:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

